# CalcPro

./: CMakeLists.txt  CalcPro++  LICENCE  README.md  main.py
.github/workflows/: build-apk.yml
